dfir_rs/tests/compile-fail-stable/surface_join_generics_extra.stderr
error: `join` should have at least 0 and at most 1 generic type arguments, actually has 2.
 --> tests/compile-fail-stable/surface_join_generics_extra.rs:5:20
  |
5 |         j = join::<usize, usize>() -> for_each(std::mem::drop);
  |                    ^^^^^

error[E0599]: no method named `run_available_sync` found for unit type `()` in the current scope
 --> tests/compile-fail-stable/surface_join_generics_extra.rs:9:8
  |
9 |     df.run_available_sync();
  |        ^^^^^^^^^^^^^^^^^^ method not found in `()`
